[gd_scene load_steps=3 format=2]

[ext_resource path="res://autoloads/Pause.gd" type="Script" id=1]
[ext_resource path="res://art/black.png" type="Texture" id=2]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -13.0
margin_right = 32.0
margin_bottom = 13.0
text = "Resume"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.538
anchor_right = 0.5
anchor_bottom = 0.538
margin_left = -29.0
margin_top = 3.19998
margin_right = 33.0
margin_bottom = 29.2
text = "Quit"

[connection signal="pressed" from="Resume" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
